# levelgd

./: CMakeLists.txt  README.md
gd/: geodesic_dome_application.cc  geodesic_dome_application.h  geodesic_dome_icosahedron.cc  geodesic_dome_icosahedron.h  geodesic_dome_logger.cc  geodesic_dome_logger.h  geodesic_dome_main.cc  geodesic_dome_manager.cc  geodesic_dome_manager.h  geodesic_dome_subdivision.cc  geodesic_dome_subdivision.h  geodesic_dome_trace.cc  geodesic_dome_trace.h  precompiled_headers.h
